force-app/main/default/objects/Delai__c/Delai__c.object-meta.xml
<CustomObject>
    <label>Délai</label>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>Nom</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Délais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>