force-app/main/default/objects/Delai__c/fields/Complexite__c.field-meta.xml
<CustomField>
    <fullName>Complexite__c</fullName>
    <label>Complexité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Complexite_des_travaux</valueSetName>
    </valueSet>
</CustomField>