force-app/main/default/objects/Delai__c/fields/Date_de_livraison_numerique__c.field-meta.xml
<CustomField>
    <fullName>Date_de_livraison_numerique__c</fullName>
    <label>Date de livraison numérique</label>
    <type>Date</type>
</CustomField>