force-app/main/default/objects/Delai__c/fields/Date_de_prise_d_empreinte__c.field-meta.xml
<CustomField>
    <fullName>Date_de_prise_d_empreinte__c</fullName>
    <label>Date de prise d&apos;empreinte</label>
    <type>Date</type>
</CustomField>