force-app/main/default/objects/Delai__c/fields/Date_Envoi_Usine__c.field-meta.xml
<CustomField>
    <fullName>Date_Envoi_Usine__c</fullName>
    <label>Date Envoi Usine</label>
    <type>Date</type>
</CustomField>