force-app/main/default/objects/Delai__c/fields/Date_Retour_Labo__c.field-meta.xml
<CustomField>
    <fullName>Date_Retour_Labo__c</fullName>
    <label>Date Retour Labo</label>
    <type>Date</type>
</CustomField>