force-app/main/default/objects/Delai__c/fields/Usine__c.field-meta.xml
<CustomField>
    <fullName>Usine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usine</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Délais</relationshipLabel>
    <relationshipName>D_lais</relationshipName>
    <type>Lookup</type>
</CustomField>