force-app/main/default/objects/Delai__c/fields/Zone_de_livraison__c.field-meta.xml
<CustomField>
    <fullName>Zone_de_livraison__c</fullName>
    <label>Zone de livraison</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Zones_de_livraison</valueSetName>
    </valueSet>
</CustomField>