force-app/main/default/objects/Delai__c/listViews/DELAIS_PARIS.listView-meta.xml
<ListView>
    <fullName>DELAIS_PARIS</fullName>
    <columns>NAME</columns>
    <columns>Complexite__c</columns>
    <columns>Zone_de_livraison__c</columns>
    <columns>Date_de_prise_d_empreinte__c</columns>
    <columns>Date_de_livraison__c</columns>
    <columns>Date_de_livraison_numerique__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_de_prise_d_empreinte__c</field>
        <operation>equals</operation>
        <value>2/3/2023</value>
    </filters>
    <label>DELAIS PARIS</label>
</ListView>